change: adjust jenkinsfile

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -61,6 +61,16 @@
                 </configuration>
             </plugin>
 
+            <!-- Site Plugin to generate HTML reports -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.9.1</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/site</outputDirectory>
+                </configuration>
+            </plugin>
+
             <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
