--- a/compose.yml
+++ b/compose.yml
@@ -14,6 +14,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       JENKINS_OPTS: --prefix=/jenkins
+      SELENIUM_HOST: selenium-chrome
     networks:
       - selenium-network
 
